style: 🧪 fix wrapping issue with tournament cards

--- a/packages/tennis-tournaments/src/TournamentsPage.module.css
+++ b/packages/tennis-tournaments/src/TournamentsPage.module.css
@@ -7,3 +7,8 @@
   margin: 0.67em 0 0.67em 15px;
   font-weight: 900;
 }
+
+.Tournaments {
+  display: flex;
+  flex-wrap: wrap;
+}
